# genomers

./: Cargo.toml  README.md
src/: accession.rs  download.rs  main.rs
