[package]
name = "genomers"
version = "0.1.1"
authors = ["Matteo Bolner"]
description = "Package to download NCBI genome data and metadata"
edition = "2021"
license = "MIT"
keywords = ["genome", "NCBI", "genome-assembly", "bioinformatics"]
categories = ["science::bioinformatics::sequence-analysis","command-line-utilities"]
readme = "README.md"
repository = "https://github.com/matteobolner/genomers"


[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
regex = "1.10.6"
tokio = { version = "1.40.0", features= ["full"] }
reqwest = { version = "0.12.7", features = ["stream", "blocking"] }
url = "2.5.2"
futures-util = "0.3.30"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
